# imsg

./: Cargo.toml  README.md
.plan/: impl-plan.md  send-plan.md
.tasks/: TODO.md
crates/cli/: Cargo.toml
crates/cli/src/: args.rs  dates.rs  main.rs  osascript.rs  render.rs
crates/cli/src/cmd/: attachments.rs  chats.rs  contacts.rs  doctor.rs  messages.rs  mod.rs  send.rs
crates/core/: Cargo.toml
crates/core/src/: attachments.rs  blocklist.rs  chats.rs  contacts.rs  db.rs  error.rs  lib.rs  messages.rs
