[package]
name = "imsg"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "imsg"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.103"
chrono = "=0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
imsg-core = { version = "0.1.0", path = "../core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
